--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -1,7 +1,10 @@
 /*Colors*/
-$body-bg: #232524;
+$body-bg: #1d1d1d;
+$body-font-color: #fff;
 $primary-color: #e36929;
-$bg-color: #232524;
+$bg-color: #1d1d1d;
+$bg-color-light: #3f3f3f;
+$bg-color-gray: #272727;
 
 /*Sizes*/
 $settingbar-width: 4rem;
