--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -1,10 +1,11 @@
 /*Colors*/
 $body-bg: #1d1d1d;
 $body-font-color: #fff;
-$primary-color: #e36929;
 $bg-color: #1d1d1d;
 $bg-color-light: #3f3f3f;
 $bg-color-gray: #272727;
+$primary-color: #e36929;
+$error-color: #de3b28;
 
 /*Sizes*/
 $settingbar-width: 3rem;
