--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -5,6 +5,7 @@ $bg-color: #1d1d1d;
 $bg-color-light: #3f3f3f;
 $bg-color-gray: #272727;
 $primary-color: #e36929;
+$success-color: #32b643;
 $error-color: #de3b28;
 
 /*Sizes*/
