--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -50,6 +50,20 @@ body{
    }
 }
 
+// Animations
+@keyframes rotation {
+   from {
+     transform: rotate(0deg);
+   }
+   to {
+     transform: rotate(359deg);
+   }
+} 
+
+.rotate {
+   animation: rotation .8s infinite linear;
+}
+
 /*Override*/
 .modal{
    .modal-overlay,
