--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -46,7 +46,7 @@ body{
    }
 
    &.dbi-oracledb{
-      background-image: url('/svg/oracledb3.svg');
+      background-image: url('/svg/oracledb.svg');
    }
 }
 
