--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "transitions";
 @import "mdi-additions";
+@import "db-icons";
 @import "~spectre.css/src/spectre";
 
 body{
@@ -25,29 +26,6 @@ body{
 .p-vcentered{
    display: flex!important;
    align-items: center;
-}
-
-.dbi{
-   display: inline-block;
-   width: 42px;
-   height: 42px;
-   background-size: cover;
-
-   &.dbi-mysql{
-      background-image: url('../images/svg/mysql.svg');
-   }
-
-   &.dbi-mssql{
-      background-image: url('../images/svg/mssql.svg');
-   }
-
-   &.dbi-pg{
-      background-image: url('../images/svg/pg.svg');
-   }
-
-   &.dbi-oracledb{
-      background-image: url('../images/svg/oracledb.svg');
-   }
 }
 
 // Scrollbars
