--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -1,5 +1,9 @@
+
+@import "~spectre.css/src/variables";
 @import "variables";
 @import "transitions";
+@import "data-types";
+@import "fake-tables";
 @import "mdi-additions";
 @import "db-icons";
 @import "~spectre.css/src/spectre";
@@ -131,4 +135,11 @@ body{
 
 .accordion-body {
    max-height: 500rem!important;
+}
+
+.btn.loading {
+   > .material-icons,
+   > span{
+      visibility: hidden;
+   }
 }
