--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -7,6 +7,7 @@
 @import "mdi-additions";
 @import "db-icons";
 @import "~spectre.css/src/spectre";
+@import "~spectre.css/src/spectre-exp";
 
 body{
    user-select: none;
