--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -14,6 +14,7 @@
    "char": seagreen,
    "varchar": seagreen,
    "text": seagreen,
+   "mediumtext": seagreen,
 
    "int": cornflowerblue,
    "tinyint": cornflowerblue,
@@ -23,6 +24,7 @@
    "datetime": coral,
    "date": coral,
    "time": coral,
+   "timestamp": coral,
 
    "bit": lightskyblue,
    
