Start implementing fields edit

--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -7,6 +7,7 @@ $bg-color-gray: #272727;
 $primary-color: #e36929;
 $success-color: #32b643;
 $error-color: #de3b28;
+$warning-color: #e0a40c;
 
 /*Sizes*/
 $titlebar-height: 1.5rem;
