Row multi select

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -15,11 +15,13 @@
    "varchar": seagreen,
    "text": seagreen,
    "mediumtext": seagreen,
+   "longtext": seagreen,
 
    "int": cornflowerblue,
    "tinyint": cornflowerblue,
    "smallint": cornflowerblue,
    "mediumint": cornflowerblue,
+   "bigint": cornflowerblue,
    
    "datetime": coral,
    "date": coral,
