--- a/src/renderer/scss/_fake-tables.scss
+++ b/src/renderer/scss/_fake-tables.scss
@@ -16,6 +16,9 @@
    &.table-striped {
      .tbody {
        .tr {
+         &.selected{
+          background: #333!important;
+         }
          &.active {
            background: $bg-color-dark;
          }
