--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -1,4 +1,3 @@
-
 @import "~spectre.css/src/variables";
 @import "variables";
 @import "transitions";
@@ -9,7 +8,7 @@
 @import "~spectre.css/src/spectre";
 @import "~spectre.css/src/spectre-exp";
 
-body{
+body {
    user-select: none;
 }
 
@@ -19,21 +18,21 @@ body{
 @include padding-variant(3, $unit-3);
 @include padding-variant(4, $unit-4);
 
-.btn.btn-gray{
+.btn.btn-gray {
    color: #fff;
    background: $bg-color-gray;
 
-   &:hover{
+   &:hover {
       background: $bg-color;
    }
 }
 
-.p-vcentered{
-   display: flex!important;
+.p-vcentered {
+   display: flex !important;
    align-items: center;
 }
 
-.c-help{
+.c-help {
    cursor: help;
 }
 
@@ -42,109 +41,108 @@ body{
    width: 10px;
    height: 10px;
 }
- 
+
 ::-webkit-scrollbar-track {
-   background: $bg-color-light; 
+   background: $bg-color-light;
 }
-  
- ::-webkit-scrollbar-thumb {
-   background: rgba($color: #FFF, $alpha: .5); 
+
+::-webkit-scrollbar-thumb {
+   background: rgba($color: #fff, $alpha: 0.5);
 
    &:hover {
-      background: rgba($color: #FFF, $alpha: 1); 
+      background: rgba($color: #fff, $alpha: 1);
    }
 }
 
 // Animations
 @keyframes rotation {
    from {
-     transform: rotate(0deg);
+      transform: rotate(0deg);
    }
    to {
-     transform: rotate(359deg);
+      transform: rotate(359deg);
    }
-} 
+}
 
 .rotate {
-   animation: rotation .8s infinite linear;
+   animation: rotation 0.8s infinite linear;
 }
 
 /*Override*/
-.modal{
+.modal {
    .modal-overlay,
-   &.active .modal-overlay{
+   &.active .modal-overlay {
       background: rgba(255, 255, 255, 0.15);
    }
-   
+
    .modal-sm .modal-container,
-   .modal-container{
+   .modal-container {
       box-shadow: 0 0 1px 0px #000;
       padding: 0;
       background: $bg-color;
-   
-      .modal-header{
-         padding: .4rem .8rem;
+
+      .modal-header {
+         padding: 0.4rem 0.8rem;
          text-transform: uppercase;
          background: $bg-color-gray;
          display: flex;
          justify-content: space-between;
          align-items: center;
-         color: #FFF;
+         color: #fff;
       }
    }
 }
 
-.tab{
+.tab {
    border-color: #272727;
 }
 
-.panel{
+.panel {
    border: none;
 }
 
-.badge{
+.badge {
    &[data-badge],
-   &:not([data-badge]){
+   &:not([data-badge]) {
       &::after {
          box-shadow: none;
       }
    }
 }
 
-.form-select{
+.form-select {
    cursor: pointer;
 }
 
 .form-select,
 .form-select:not([multiple]):not([size]),
 .form-input,
-.form-checkbox .form-icon, 
-.form-radio .form-icon{
+.form-checkbox .form-icon,
+.form-radio .form-icon {
    border-color: $bg-color-light;
    background: $bg-color-gray;
 }
 
-.form-select:not([multiple]):not([size]):focus{
+.form-select:not([multiple]):not([size]):focus {
    border-color: $primary-color;
 }
 
-.menu{
-   font-size: .7rem;
+.menu {
+   font-size: 0.7rem;
    .menu-item {
-      + .menu-item{
+      + .menu-item {
          margin-top: 0;
       }
    }
-
-} 
+}
 
 .accordion-body {
-   max-height: 500rem!important;
+   max-height: 500rem !important;
 }
 
 .btn.loading {
    > .material-icons,
-   > span{
+   > span {
       visibility: hidden;
    }
 }
