refactor: moved queri fields mapping to main process

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -21,6 +21,9 @@
     "tinyint": cornflowerblue,
     "smallint": cornflowerblue,
     "mediumint": cornflowerblue,
+    "float": cornflowerblue,
+    "double": cornflowerblue,
+    "decimal": cornflowerblue,
     "bigint": cornflowerblue,
     "datetime": coral,
     "date": coral,
