feat: sql suggestions in query editor

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -33,6 +33,8 @@
     "blob": darkorchid,
     "mediumblob": darkorchid,
     "longblob": darkorchid,
+    "enum": gold,
+    "set": gold,
     "unknown": gray,
   )
 );
