feat: data table autorefresh, closes #36

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -37,6 +37,12 @@ body {
   cursor: help;
 }
 
+.no-border {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
 .bg-checkered {
   background-image:
     linear-gradient(to right, rgba(192, 192, 192, 0.75), rgba(192, 192, 192, 0.75)),
