fix: duplicate header fields on join result tables

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -64,6 +64,38 @@ body {
   background-size: 2em 2em;
 }
 
+.workspace-tabs {
+  align-content: baseline;
+
+  .workspace-query-runner {
+    .workspace-query-runner-footer {
+      display: flex;
+      justify-content: space-between;
+      padding: 0.3rem 0.6rem 0.4rem;
+      align-items: center;
+
+      .workspace-query-buttons {
+        display: flex;
+
+        .btn {
+          display: flex;
+          align-self: center;
+          color: $body-font-color;
+          margin-right: 0.4rem;
+        }
+      }
+
+      .workspace-query-info {
+        display: flex;
+
+        > div + div {
+          padding-left: 0.6rem;
+        }
+      }
+    }
+  }
+}
+
 // Scrollbars
 ::-webkit-scrollbar {
   width: 10px;
