--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -9,6 +9,14 @@ $success-color: #32b643;
 $error-color: #de3b28;
 $warning-color: #e0a40c;
 
+$string-color: seagreen;
+$number-color: cornflowerblue;
+$date-color: coral;
+$bit-color: lightskyblue;
+$blob-color: darkorchid;
+$enum-color: gold;
+$unknown-color: gray;
+
 /* Sizes */
 $titlebar-height: 1.5rem;
 $settingbar-width: 3rem;
