feat: processes list tool

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -41,6 +41,7 @@
     "blob": $blob-color,
     "tinyblob": $blob-color,
     "mediumblob": $blob-color,
+    "medium_blob": $blob-color,
     "longblob": $blob-color,
     "enum": $enum-color,
     "set": $enum-color,
