feat(UI): modal that shows process query

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -30,6 +30,7 @@
     "double": $number-color,
     "decimal": $number-color,
     "bigint": $number-color,
+    "newdecimal": $number-color,
     "datetime": $date-color,
     "date": $date-color,
     "time": $date-color,
