feat(PostgreSQL): partial postgre implementation

--- a/src/renderer/scss/_data-types.scss
+++ b/src/renderer/scss/_data-types.scss
@@ -22,6 +22,14 @@
     "mediumtext": $string-color,
     "longtext": $string-color,
     "json": $string-color,
+    "name": $string-color,
+    "character": $string-color,
+    "character_varying": $string-color,
+    "cidr": $string-color,
+    "inet": $string-color,
+    "macaddr": $string-color,
+    "macaddr8": $string-color,
+    "uuid": $string-color,
     "int": $number-color,
     "tinyint": $number-color,
     "smallint": $number-color,
@@ -31,12 +39,25 @@
     "decimal": $number-color,
     "bigint": $number-color,
     "newdecimal": $number-color,
+    "integer": $number-color,
+    "numeric": $number-color,
+    "smallserial": $number-color,
+    "serial": $number-color,
+    "bigserial": $number-color,
+    "real": $number-color,
+    "double_precision": $number-color,
+    "oid": $number-color,
+    "xid": $number-color,
+    "money": $number-color,
     "datetime": $date-color,
     "date": $date-color,
     "time": $date-color,
+    "time_with_time_zone": $date-color,
     "year": $date-color,
     "timestamp": $date-color,
+    "timestamp_with_time_zone": $date-color,
     "bit": $bit-color,
+    "bit_varying": $bit-color,
     "binary": $blob-color,
     "varbinary": $blob-color,
     "blob": $blob-color,
@@ -44,8 +65,14 @@
     "mediumblob": $blob-color,
     "medium_blob": $blob-color,
     "longblob": $blob-color,
+    "bytea": $blob-color,
     "enum": $enum-color,
     "set": $enum-color,
+    "boolean": $enum-color,
+    "interval": $array-color,
+    "array": $array-color,
+    "anyarray": $array-color,
+    "pg_node_tree": $array-color,
     "unknown": $unknown-color,
   )
 );
