--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -14,6 +14,7 @@ $number-color: cornflowerblue;
 $date-color: coral;
 $bit-color: lightskyblue;
 $blob-color: darkorchid;
+$array-color: greenyellow;
 $enum-color: gold;
 $unknown-color: gray;
 
