--- a/src/renderer/scss/themes/dark-theme.scss
+++ b/src/renderer/scss/themes/dark-theme.scss
@@ -106,6 +106,11 @@
     border-color: $primary-color;
   }
 
+  .form-input[readonly] {
+    background-color: $bg-color-dark;
+    cursor: default;
+  }
+
   .input-group .input-group-addon {
     border-color: #3f3f3f;
     background: $bg-color-dark;
