feat(UI): format and clear queries

--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -30,6 +30,10 @@ body {
   cursor: help;
 }
 
+.no-outline {
+  outline: none !important;
+}
+
 .no-border {
   outline: none !important;
   border: none !important;
