perf(UI): improved connection status indicator

--- a/src/renderer/scss/_transitions.scss
+++ b/src/renderer/scss/_transitions.scss
@@ -39,3 +39,17 @@
     transform: scale(1);
   }
 }
+
+@keyframes connecting {
+  0% {
+    background-color: transparent;
+  }
+
+  50% {
+    background-color: $warning-color;
+  }
+
+  100% {
+    background-color: transparent;
+  }
+}
