perf(UI): increased application border-radius

--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -22,6 +22,7 @@ $enum-color: goldenrod;
 $unknown-color: gray;
 
 /* Sizes */
+$border-radius: 0.3rem;
 $titlebar-height: 1.5rem;
 $settingbar-width: 3rem;
 $explorebar-width: 14rem;
